fixing demo overflow in firefox

--- a/demo/demo.styl
+++ b/demo/demo.styl
@@ -61,6 +61,7 @@ header
   perspective: 62.5rem
   text-align: center
   margin-bottom: 0.625rem
+  overflow: hidden
 
   .rotation
     animation: swivel 12s ease-out
@@ -223,6 +224,7 @@ pre
   background-image: url('./images/1.jpg')
   background-size: 21.875rem
   transition: color .5s, border-color .5s
+  overflow: hidden
 
   > h1
     text-transform: uppercase
@@ -303,6 +305,7 @@ h3
 .demo
   margin: 0 auto
 
+
 .demo2
   font-family: "Abril Fatface", "Hoefler Text", Constantia, Palatino, Georgia, serif
   font-size: 4.5rem
@@ -348,6 +351,11 @@ h3
   border: 0.9375rem solid #E2BB7C
   letter-spacing: -0.3125rem
   padding: 3.125rem 0.625rem
+
+
+#example-curl 
+  position: relative
+  overflow: hidden
 
 
 .demo6
